--- a/style/architect.css
+++ b/style/architect.css
@@ -1,3 +1,75 @@
-h1{
-    color: aqua;
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+.work-sans-font{
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
+/*navbar*/
+.nav-title{
+    font-weight: 800;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+
+}
+.nav-link{
+  
+  text-decoration:none;
+  display: flex;
+
+}
+ .nav-item{
+    list-style: none;
+    margin: 30px;
+    font-weight: 500;
+
+}
+.dark-2{
+    color: gray;
+}
+.bg-light{
+    background-color: rgb(255, 144, 14,0.1)
+}
+.navbar ,.banner{
+    max-width: 1440px;
+    margin: 0px auto;
+}
+.banner-contant{
+    max-width: 850px;
+    margin: 0px auto;
+    text-align: center;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 3rem;
+    .banner-d
+}
+.primary-button{
+    background-color: #FF900E;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    padding: 20px 25px;
+    font-weight: 600;
+    font-size: 1.25rem;
+}
+.banner-img{
+    width: 100%;
+}
+@media screen and (mix max-width:576px) {
+    .nav-link,.navbar{
+        flex-direction: column;
+    }
+    
+}
+
+
+
+    
